# speedtest

./: CMakeLists.txt  Makefile  README  main.c  speedtest.c
speedtest/: speedtest.c  speedtest.h
